// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeAsyncResultsToFile - Snapshot Tests should produce consistent async results JSON output 1`] = `
Object {
  "summary": Object {
    "commandTimeInMs": 4000,
    "failRate": "25%",
    "failing": 1,
    "hostname": "async-snapshot-host",
    "orgId": "00D000000000000EAA",
    "outcome": "Completed",
    "passRate": "75%",
    "passing": 3,
    "skipRate": "0%",
    "skipped": 0,
    "testExecutionTimeInMs": 2000,
    "testRunId": "async-snapshot-run-789",
    "testStartTime": "2023-01-01T14:30:00.000Z",
    "testTotalTimeInMs": 3000,
    "testsRan": 4,
    "userId": "005000000000000AAA",
    "username": "async-snapshot@example.com",
  },
  "tests": Array [
    Object {
      "apexClass": Object {
        "fullName": "AsyncSnapshotTestClass1",
        "id": "01p000000000001AAA",
        "name": "AsyncSnapshotTestClass1",
        "namespacePrefix": null,
      },
      "apexLogId": null,
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "AsyncSnapshotTestClass1.testAsyncSnapshotMethod1",
      "id": "01p000000000001AAA",
      "message": null,
      "methodName": "testAsyncSnapshotMethod1",
      "outcome": "Pass",
      "queueItemId": "709000000000001AAA",
      "runTime": 800,
      "stackTrace": null,
      "testTimestamp": "2023-01-01T14:30:00.500Z",
    },
    Object {
      "apexClass": Object {
        "fullName": "AsyncNamespace.AsyncSnapshotTestClass2",
        "id": "01p000000000002AAA",
        "name": "AsyncSnapshotTestClass2",
        "namespacePrefix": "AsyncNamespace",
      },
      "apexLogId": "07L000000000001AAA",
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "AsyncNamespace.AsyncSnapshotTestClass2.testAsyncSnapshotMethod2",
      "id": "01p000000000002AAA",
      "message": "Async test failed with complex error details",
      "methodName": "testAsyncSnapshotMethod2",
      "outcome": "Fail",
      "queueItemId": "709000000000002AAA",
      "runTime": 600,
      "stackTrace": "System.AsyncException: Async operation failed\\\\nLine 15: someMethod()\\\\nLine 23: anotherMethod()",
      "testTimestamp": "2023-01-01T14:30:01.100Z",
    },
    Object {
      "apexClass": Object {
        "fullName": "AsyncSnapshotTestClass3",
        "id": "01p000000000003AAA",
        "name": "AsyncSnapshotTestClass3",
        "namespacePrefix": null,
      },
      "apexLogId": null,
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "AsyncSnapshotTestClass3.testAsyncSnapshotMethod3",
      "id": "01p000000000003AAA",
      "message": null,
      "methodName": "testAsyncSnapshotMethod3",
      "outcome": "Pass",
      "queueItemId": "709000000000003AAA",
      "runTime": 400,
      "stackTrace": null,
      "testTimestamp": "2023-01-01T14:30:01.500Z",
    },
    Object {
      "apexClass": Object {
        "fullName": "AnotherNamespace.AsyncSnapshotTestClass4",
        "id": "01p000000000004AAA",
        "name": "AsyncSnapshotTestClass4",
        "namespacePrefix": "AnotherNamespace",
      },
      "apexLogId": null,
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "AnotherNamespace.AsyncSnapshotTestClass4.testAsyncSnapshotMethod4",
      "id": "01p000000000004AAA",
      "message": null,
      "methodName": "testAsyncSnapshotMethod4",
      "outcome": "Pass",
      "queueItemId": "709000000000004AAA",
      "runTime": 200,
      "stackTrace": null,
      "testTimestamp": "2023-01-01T14:30:01.700Z",
    },
  ],
}
`;

exports[`writeAsyncResultsToFile - Snapshot Tests should produce consistent output with complex nested data 1`] = `
Object {
  "summary": Object {
    "commandTimeInMs": 4000,
    "failRate": "25%",
    "failing": 1,
    "hostname": "async-snapshot-host",
    "orgId": "00D000000000000EAA",
    "outcome": "Completed",
    "passRate": "75%",
    "passing": 3,
    "skipRate": "0%",
    "skipped": 0,
    "testExecutionTimeInMs": 2000,
    "testRunId": "async-snapshot-run-789",
    "testStartTime": "2023-01-01T14:30:00.000Z",
    "testTotalTimeInMs": 3000,
    "testsRan": 4,
    "userId": "005000000000000AAA",
    "username": "async-snapshot@example.com",
  },
  "tests": Array [
    Object {
      "apexClass": Object {
        "fullName": "AsyncSnapshotTestClass1",
        "id": "01p000000000001AAA",
        "name": "AsyncSnapshotTestClass1",
        "namespacePrefix": null,
      },
      "apexLogId": null,
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "AsyncSnapshotTestClass1.testAsyncSnapshotMethod1",
      "id": "01p000000000001AAA",
      "message": null,
      "methodName": "testAsyncSnapshotMethod1",
      "outcome": "Pass",
      "perClassCoverage": Array [],
      "queueItemId": "709000000000001AAA",
      "runTime": 800,
      "stackTrace": null,
      "testTimestamp": "2023-01-01T14:30:00.500Z",
    },
    Object {
      "apexClass": Object {
        "fullName": "AsyncNamespace.AsyncSnapshotTestClass2",
        "id": "01p000000000002AAA",
        "name": "AsyncSnapshotTestClass2",
        "namespacePrefix": "AsyncNamespace",
      },
      "apexLogId": "07L000000000001AAA",
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "AsyncNamespace.AsyncSnapshotTestClass2.testAsyncSnapshotMethod2",
      "id": "01p000000000002AAA",
      "message": "Async test failed with complex error details",
      "methodName": "testAsyncSnapshotMethod2",
      "outcome": "Fail",
      "queueItemId": "709000000000002AAA",
      "runTime": 600,
      "stackTrace": "Multi-line\\\\nstack\\\\ntrace\\\\nwith\\\\nspecial\\\\ncharacters: \\"quotes\\", \\\\backslashes, and [brackets]",
      "testTimestamp": "2023-01-01T14:30:01.100Z",
    },
  ],
}
`;

exports[`writeAsyncResultsToFile - Snapshot Tests should produce consistent output with empty test results 1`] = `
Object {
  "summary": Object {
    "commandTimeInMs": 100,
    "failRate": "0%",
    "failing": 0,
    "hostname": "empty-test-host",
    "orgId": "00D000000000000EAA",
    "outcome": "Completed",
    "passRate": "0%",
    "passing": 0,
    "skipRate": "0%",
    "skipped": 0,
    "testExecutionTimeInMs": 0,
    "testRunId": "empty-snapshot-test",
    "testStartTime": "2023-01-01T14:30:00.000Z",
    "testTotalTimeInMs": 0,
    "testsRan": 0,
    "userId": "005000000000000AAA",
    "username": "empty@example.com",
  },
  "tests": Array [],
}
`;

exports[`writeAsyncResultsToFile - Snapshot Tests should produce consistent output with null values 1`] = `
Object {
  "summary": Object {
    "commandTimeInMs": 4000,
    "failRate": "25%",
    "failing": 1,
    "hostname": "async-snapshot-host",
    "orgId": "00D000000000000EAA",
    "outcome": "Completed",
    "passRate": "75%",
    "passing": 3,
    "skipRate": "0%",
    "skipped": 0,
    "testExecutionTimeInMs": 2000,
    "testRunId": "null-values-snapshot-test",
    "testStartTime": "2023-01-01T14:30:00.000Z",
    "testTotalTimeInMs": 3000,
    "testsRan": 4,
    "userId": "005000000000000AAA",
    "username": "async-snapshot@example.com",
  },
  "tests": Array [
    Object {
      "apexClass": Object {
        "fullName": "NullValuesTestClass",
        "id": "01p000000000001AAA",
        "name": "NullValuesTestClass",
        "namespacePrefix": null,
      },
      "apexLogId": null,
      "asyncApexJobId": "707000000000001AAA",
      "fullName": "NullValuesTestClass.testWithNullValues",
      "id": "01p000000000001AAA",
      "message": null,
      "methodName": "testWithNullValues",
      "outcome": "Pass",
      "queueItemId": "709000000000001AAA",
      "runTime": 250,
      "stackTrace": null,
      "testTimestamp": "2023-01-01T14:30:00.000Z",
    },
  ],
}
`;
